--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ img {
 
 a {
   margin: auto;
-  width: 800px;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: grey;
 }
 
 figcaption {
