Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ img {
 
 a {
   margin: auto;
+  text-align: center;
   padding-left: 10px;
   padding-right: 10px;
   background: grey;
+  position: absolute;
 }
 
 figcaption {
