--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ img {
 }
 
 a {
-  margin: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-  background: grey;
-  position: absolute;
+  position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
 }
 
 figcaption {
