--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ img {
 }
 
 a {
-  position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
+  margin: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: grey;
+  position: absolute;
 }
 
 figcaption {
