--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ img {
 }
 
 nav a {
-  margin: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-  background: grey;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 figcaption {
